--- a/erp/src/main/resources/application.properties
+++ b/erp/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=erp
+
+spring.datasource.url=jdbc:postgresql://ep-shiny-truth-a57cmj1f.us-east-2.aws.neon.tech/erpdb?sslmode=require 
+spring.datasource.username=erpdb_owner
+spring.datasource.password=5eBXRfHEN3qt
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
